--- a/_posts/2019-09-29-Fair-2012-PNAS.md
+++ b/_posts/2019-09-29-Fair-2012-PNAS.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-author: Fair, D. A., Bathula, D., Nikolas, M. A., & Nigg, J. T. 
+author: macmitch 
 tags: []
 article_doi: https://doi.org/10.1073/pnas.1115365109
 ---
