--- a/_posts/2019-12-15-Cooper-2019-elife.md
+++ b/_posts/2019-12-15-Cooper-2019-elife.md
@@ -1,3 +1,8 @@
+---
+layout: post
+author: achennings
+---
+
 # Cortico-hippocampal network connections support the multidimensional quality of episodic memory
 
 ## Introduction
